re PR c++/54947 ([C++11] lambda cannot capture-by-copy inside braced-init-list)

PR c++/54947
	* parser.c (cp_parser_initializer_list): Don't require an
	expression in [] to be constant until we know it's a C99
	designator.

From-SVN: r194254